# AE-Peekaboo

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  test.py
backend/: .env.example  Dockerfile  init_db.py  requirements.txt
backend/assets/: main.py
backend/migrations/: env.py
backend/migrations/versions/: 20250417232607_create_drugs_table.py  20250509175901_tables_update.py  20250509182006_obligation.py  20250509183229_obligation2.py  20250509183824_delete_name_from_submission_rules.py  20250510131203_alter_submission_rules_deadline_to_.py  20250511124347_add_user_table.py  20250511130830_alter_user_table.py  20250516135803_type_of_event_fk.py  20250601152147_submission.py
backend/src/: __init__.py
backend/src/application/: __init__.py
backend/src/application/services/: aho.py  auth.py  nlp.py  text_processing.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/models/: __init__.py  public.py
backend/src/infrastructure/repositories/: base.py  drugs.py  user.py
backend/src/infrastructure/schemas/: text_processing.py  user.py
backend/src/interfaces/api/: admin.py  app.py  urls.py
backend/src/interfaces/api/dependencies/: auth.py  automaton.py  session.py
backend/src/interfaces/api/middleware/: metrics.py
backend/src/interfaces/api/routers/api/: __init__.py
backend/src/interfaces/api/routers/api/v1/: __init__.py  aho.py  auth.py  text_processing.py
backend/src/interfaces/api/routers/monitoring/: __init__.py  monitoring.py
backend/src/settings/: __init__.py  app.py  db.py  log.py
backend/templates/sqladmin/: index.html
etc/: requirements.txt
frontend/: Dockerfile  package-lock.json  package.json  webpack.config.js
frontend/src/: App.js
frontend/src/components/: DownloadButton.jsx  SearchForm.js  admin.jsx
frontend/src/components/Report/: EditReportModal.jsx  EditReportModal_1.jsx  FullReportModal.js  ReportPreview.js
frontend/src/components/UI/: StyledTable.jsx  styles.js
migrations/versions/: 20250417232607_create_drugs_table.py
src/: __init__.py
src/application/services/: aho.py  nlp.py  text_processing.py
src/infrastructure/: session.py
src/infrastructure/models/: __init__.py  public.py
src/infrastructure/repositories/: base.py  drugs.py
src/infrastructure/schemas/: __init__.py
src/interfaces/: __init__.py
src/interfaces/api/: __init__.py  app.py
src/interfaces/api/dependencies/: __init__.py  automaton.py  session.py
src/interfaces/api/middleware/: __init__.py  metrics.py
src/interfaces/api/routers/api/: __init__.py
src/interfaces/api/routers/api/v1/: __init__.py  aho.py  text_processing.py
src/interfaces/api/routers/monitoring/: __init__.py  monitoring.py
src/settings/: __init__.py  app.py  db.py  log.py
